<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:fitsSystemWindows="true"
              tools:context=".NewTransaccActivity">

    <!-- Toolbar -->
    <include layout="@layout/toolbar"/>

    <!--Resto de layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/color_background">

        <!--Importe-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <!-- Tipo de transacción (ingreso o gasto)-->
            <ToggleButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:textOn=""
                android:textOff=""
                android:background="@drawable/toggle_gasto"
                android:id="@+id/btTipoTransacc"/>

            <!--Aquí se introduce el importe-->
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/editImporte"
                android:hint= "@string/importe"
                android:layout_weight="1" />

            <!-- TODO:modificar divisa por código según selección del usuario-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="€"
                android:textSize="40dp"
                android:id="@+id/tDivisa" />
        </LinearLayout>

        <!-- Fecha-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_calendario"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:inputType="none"
                android:focusable="false"
                android:id="@+id/tvFecha"
                android:layout_gravity="bottom"
                android:layout_weight="1"/>

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_recur"
                style="?android:attr/borderlessButtonStyle"
                android:scaleType="centerCrop"
                android:padding="0dp"
                android:onClick="setRecur"
                android:id="@+id/bRecur"/>

        </LinearLayout>


        <!--Concepto-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_nota"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editConcepto"
                android:hint="@string/concepto"
                android:layout_gravity="bottom"/>
        </LinearLayout>

        <!--Categorías-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:id="@+id/cat_line"
            android:layout_marginTop="40dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_interrogante"
                android:id="@+id/iconoCat"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/catName"
                android:hint="@string/selectCat"
                android:layout_weight="1"
                android:inputType="none"
                android:focusable="false"
                android:clickable="true"
                android:layout_gravity="bottom"/>
        </LinearLayout>

        <!-- Aceptar y cancelar-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            style="?android:attr/buttonBarStyle">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:id="@+id/bCancelar"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="sePulsaBoton" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aceptar"
                android:id="@+id/bAceptar"
                android:textColor="@color/color_background"
                android:background="@color/color_accent"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="sePulsaBoton" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>