<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".NewTransaccActivity">

    <!-- Toolbar -->
    <include layout="@layout/toolbar_main"/>

    <!--Resto de layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/color_background">

        <!--Máximo gasto-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/max_gasto"
            android:id="@+id/titleMaxGasto"
            android:layout_marginTop="40dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editImporte"
                android:layout_weight="1" />

            <!-- TODO:modificar divisa por código según selección del usuario-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="€"
                android:textSize="40dp"
                android:id="@+id/tDivisa" />
        </LinearLayout>

        <!--Categorías-->
        <!-- TODO poblar la lista-->
        <ExpandableListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/expandableListView"
            android:layout_marginTop="40dp" />

        <!-- Aceptar y cancelar-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            style="?android:attr/buttonBarStyle">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:id="@+id/bCancelar"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="sePulsaBoton" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aceptar"
                android:id="@+id/bAceptar"
                android:textColor="@color/primary_text"
                android:background="@color/color_accent"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="sePulsaBoton" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>